--- a/KonsulQ_FE/src/index.css
+++ b/KonsulQ_FE/src/index.css
@@ -9,7 +9,7 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #00ffbf;
+  background-color: #039cb3;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
